--- a/pom.xml
+++ b/pom.xml
@@ -18,12 +18,15 @@
     <build>
         <plugins>
             <plugin>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.2</version>
-                <configuration>
-                    <source>1.7</source>
-                    <target>1.7</target>
-                </configuration>
+                 <artifactId>maven-compiler-plugin</artifactId>
+                 <version>3.1</version>
+                 <configuration>
+                      <fork>true</fork>
+                      <executable>C:\Program Files\Java\jdk-11.0.0\bin\javac.exe</executable>
+                      <source>1.8</source>
+                      <target>1.8</target>
+                      <compilerArgument>-XDignore.symbol.file</compilerArgument>
+                 </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
