--- a/pom.xml
+++ b/pom.xml
@@ -18,15 +18,12 @@
     <build>
         <plugins>
             <plugin>
+                 <groupId>org.apache.maven.plugins</groupId>
                  <artifactId>maven-compiler-plugin</artifactId>
-                 <version>3.0</version>
                  <configuration>
-                      <fork>true</fork>
-                      <executable>C:\Program Files\Java\jdk-11.0.0\bin\javac.exe</executable>
                       <source>1.8</source>
                       <target>1.8</target>
-                      <compilerArgument>-XDignore.symbol.file</compilerArgument>
-                 </configuration>
+                  </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
