--- a/pom.xml
+++ b/pom.xml
@@ -1,35 +1,74 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.boxfuse.samples</groupId>
-    <artifactId>hello</artifactId>
+    <groupId>com.mycompany.web</groupId>
+    <artifactId>app</artifactId>
+    <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
-    <version>1.0</version>
-    <name>hello</name>
-    <url>https://github.com/boxfuse/boxfuse-sample-java-war-hello</url>
+    <name>app-1.0-SNAPSHOT</name>
+    <properties>
+         <maven.compiler.source>1.8</maven.compiler.source>
+         <maven.compiler.target>1.8</maven.compiler.target>
+         <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
+         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+         <failOnMissingWebXml>false</failOnMissingWebXml>
+         <jakartaee>8.0</jakartaee>
+    </properties>
     <dependencies>
         <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>javax.servlet-api</artifactId>
-            <version>3.1.0</version>
+            <groupId>javax</groupId>
+            <artifactId>javaee-api</artifactId>
+            <version>${jakartaee}</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
     <build>
         <plugins>
-            <plugin>
+             <plugin>
                  <groupId>org.apache.maven.plugins</groupId>
                  <artifactId>maven-compiler-plugin</artifactId>
+                 <version>3.1</version>
                  <configuration>
                       <source>1.8</source>
                       <target>1.8</target>
-                  </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-war-plugin</artifactId>
-                <version>3.1</version>
-            </plugin>
-        </plugins>
-    </build>
+                      <compilerArguments>
+                              <endorseddirs>${endorsed.dir}</endorseddirs>
+                      </compilerArguments>
+                 </configuration>
+              </plugin>
+              <plugin>
+                   <groupId>org.apache.maven.plugins</groupId>
+                   <artifactId>maven-war-plugin</artifactId>
+                   <version>2.3</version>
+                   <configuration>
+                       <failOnMissingWebXml>false</failOnMissingWebXml>
+                   </configuration>
+              </plugin>
+              <plugin>
+                   <groupId>org.apache.maven.plugins</groupId>
+                   <artifactId>maven-dependency-plugin</artifactId>
+                   <version>2.6</version>
+                   <executions>
+                       <execution>
+                          <phase>validate</phase>
+                          <goals>
+                             <goal>copy</goal>
+                          </goals>
+                          <configuration>
+                               <outputDirectory>${endorsed.dir}</outputDirectory>
+                               <silent>true</silent>
+                               <artifactItems>
+                                   <artifactItem>
+                                       <groupId>javax</groupId>
+                                       <artifactId>javaee-api</artifactId>
+                                       <version>${jakartaee}</version>
+                                       <type>jar</type>
+                                   </artifactItem>
+                               </artifactItems>
+                           </configuration>
+                        </execution>
+                    </executions>
+               </plugin>
+           </plugins>
+      </build>
 </project>
